Fixing Valign news letter pre-release page
It seams that in-page css rule do not apply on mobile, this is why I am
adding this to the css mobile file.

--- a/csstbmmobil.css
+++ b/csstbmmobil.css
@@ -252,3 +252,9 @@ button {
         margin-left: -20px;
         margin-right: -20px;
 }
+/*Centrar vertical signup para pre-release*/
+.signpre{
+   margin-top: 31px !important;
+   margin-left: 5% !important;
+   margin-right: 5% !important;
+}
